set x86 as the target platform (64-bit machines need this in order for ode to work properly -- other dlls would probably fail eventually too but ode was the first victim)

--- a/Zot.Core.Test/Zot.Core.Test.csproj
+++ b/Zot.Core.Test/Zot.Core.Test.csproj
@@ -27,6 +27,7 @@
     <StartAction>Program</StartAction>
     <StartProgram>$(NUNIT_LOC)/bin/nunit.exe</StartProgram>
     <StartArguments>Zot.Core.Test.dll</StartArguments>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
